webtools-bridge: Config file for different (rosbridge and fawkesbridge)ports in simulation and real robots
Simulation: RosBridge 9090,8080,7070
	:FawkesBridge 6060,5050,4040

--- a/cfg/gazsim-configurations/default/host_robotino_1.yaml
+++ b/cfg/gazsim-configurations/default/host_robotino_1.yaml
@@ -62,3 +62,9 @@ plugins/tag_vision:
 
 plugins/robot-memory:
   database: robmem1
+
+webtools-bridge:
+  port: 6060
+  #port where rosbridge is expected to start. Websocket connection will be established to forward the Ros requests to the Rosbridge
+  rosbridge-port: 9090
+  rosbridge-uri: "ws://localhost:9090"
