--- a/cfg/gazsim-configurations/default/host_robotino_1.yaml
+++ b/cfg/gazsim-configurations/default/host_robotino_1.yaml
@@ -30,6 +30,19 @@ plugins/light_front:
   camera: shmem:gazsim_cam:image_id=robotino1/gazsim_light_front:deep_copy=true
   shm_image_id: "robotino1/light_front"
   
+asp-agent:
+  team-name: ASP Rules!
+  robot-name: Tuvok
+  robot-number: 1
+
+  peer-address: 127.0.0.1
+  peer-recv-port: 4411
+  peer-send-port: 4421
+  cyan-recv-port: 4451
+  magenta-recv-port: 4461
+  cyan-send-port: 4471
+  magenta-send-port: 4481
+
 clips-agent:
   rcll2016:
     #agent-role:
