--- a/cfg/gazsim-configurations/default/host_robotino_3.yaml
+++ b/cfg/gazsim-configurations/default/host_robotino_3.yaml
@@ -30,6 +30,19 @@ plugins/light_front:
   camera: shmem:gazsim_cam:image_id=robotino3/gazsim_light_front:deep_copy=true
   shm_image_id: "robotino3/light_front"
 
+asp-agent:
+  team-name: ASP Rules!
+  robot-name: Spock
+  robot-number: 3
+
+  peer-address: 127.0.0.1
+  peer-recv-port: 4413
+  peer-send-port: 4423
+  cyan-recv-port: 4453
+  magenta-recv-port: 4463
+  cyan-send-port: 4473
+  magenta-send-port: 4483
+
 clips-agent:
   rcll2016:
     #agent-role:
