--- a/cfg/gazsim-configurations/default/host_asp_planer.yaml
+++ b/cfg/gazsim-configurations/default/host_asp_planer.yaml
@@ -15,6 +15,10 @@ webview:
   #TCP port for Webview HTTP requests; TCP port
   port: !tcp-port 8088
 
+clips-agent:
+  rcll2016:
+    load-reasoner: false
+
 asp-agent:
   team-name: "ASP Rules!"
   robot-number: 8
