--- a/cfg/gazsim-configurations/default/host_robotino_3.yaml
+++ b/cfg/gazsim-configurations/default/host_robotino_3.yaml
@@ -46,8 +46,9 @@ asp-agent:
 clips-agent:
   rcll2016:
     #agent-role:
+    use-asp: true
     load-reasoner: false
-    
+
     exploration:      
       row: LOW
 
