--- a/cfg/conf.d/asp-agent.yaml
+++ b/cfg/conf.d/asp-agent.yaml
@@ -3,7 +3,7 @@
 ---
 asp-agent:
   planer:
-    debug: false #true
+    debug-level: 20
     more-models: true #false
 
     program-path: ../src/agents/asp/
