--- a/cfg/conf.d/navgraph-generator.yaml
+++ b/cfg/conf.d/navgraph-generator.yaml
@@ -91,7 +91,7 @@ navgraph-generator-mps:
 
   bounding-box:
     p1: [-7,0]
-    p2: [ 7,7]
+    p2: [ 7,8]
 
   # Grid algorithm specific parameters
   grid:
@@ -110,4 +110,4 @@ navgraph-generator-mps:
     # triangle connection along the (half-)diagonals may stay intact.
     # However, it increases the number of nodes and thus the
     # computational overhead.
-    add-diagonals: true
+    add-diagonals: false
