--- a/cfg/conf.d/conveyor_pose.yaml
+++ b/cfg/conf.d/conveyor_pose.yaml
@@ -7,7 +7,7 @@ conveyor_pose:
   # sets the debug mode within the plugin, which eases the debugging,
   # which results in the following:
   # - the switch if is ignored, the plugin i running always
-  debug: true
+  debug: false
   # the point cloud that is used to detect the belt
   cloud_in: "/camera/depth/points"
 
@@ -41,7 +41,7 @@ conveyor_pose:
     ]
   
   conveyor_frame_id: conveyor_pose
-  switch_default: true
+  switch_default: false
   product_removal_default: false
   use_visualisation: false
 
