config setting for testing in the hall

--- a/cfg/conf.d/clips-agent.yaml
+++ b/cfg/conf.d/clips-agent.yaml
@@ -123,7 +123,7 @@ clips-agent:
       route:
         CYAN:
           R-1: ["exp-11", "exp-12", "exp-11"]
-          R-2: ["exp-21", "exp-22", "exp-21"]
+          R-2: ["exp-21", "exp-22", "exp-23", "exp-21", "exp-24"]
           R-3: ["exp-31", "exp-32", "exp-31"]
         MAGENTA:
           R-1: ["exp-12", "exp-11", "exp-12"]
