--- a/cfg/navgraph-basis.yaml
+++ b/cfg/navgraph-basis.yaml
@@ -70,15 +70,27 @@ nodes:
   #
   - !unconnected
     name: exp-21
-    pos: [5, 4]
+    pos: [5, 5]
     properties:
-      - orientation: 0.7
+      - orientation: -1.8
       - always-copy: true
   - !unconnected
     name: exp-22
-    pos: [-5.0, 4]
+    pos: [0.5, 5]
     properties:
-      - orientation: 0.85
+      - orientation: -1.2
+      - always-copy: true
+  - !unconnected
+    name: exp-23
+    pos: [0.5, 0.5]
+    properties:
+      - orientation: 1.2
+      - always-copy: true
+  - !unconnected
+    name: exp-24
+    pos: [5, 0.5]
+    properties:
+      - orientation: 1.8
       - always-copy: true
   
   # Low (near) row
