--- a/cfg/conf.d/amcl.yaml
+++ b/cfg/conf.d/amcl.yaml
@@ -7,7 +7,7 @@ plugins/amcl:
   # Image file containing the map, must be a PNG file
   # If path starts with slash (/) it's considered to be absolute,
   # otherwise relative to the config directory
-  map_file: maps/halle.png
+  map_file: maps/go-2017.png
   # Resolution of the map; meters per pixel
   resolution: 0.05
 
@@ -146,7 +146,7 @@ plugins/amcl:
     # Image file containing the map, must be a PNG file
     # If path starts with slash (/) it's considered to be absolute,
     # otherwise relative to the config directory
-    map_file: maps/halle-wall.png
+    map_file: maps/go-2017-wall.png
     # Resolution of the map; meters per pixel
     resolution: 0.05
 
