--- a/cfg/conf.d/robot-memory.yaml
+++ b/cfg/conf.d/robot-memory.yaml
@@ -32,7 +32,7 @@ plugins/robot-memory:
       port: 27021
       replica-set-name: "syncedrobmem"
       db-path: "~/.robot-memory/dbs/distributed"
-      replica-set-members: "[{_id:1,host:'stargazer:27021'}, {_id:2,host:'orinoco:27021'}, {_id:3, host:'agamemnon:27021'}]"
+      replica-set-members: "[{_id:1,host:'robotino-laptop-1:27021'}, {_id:2,host:'robotino-laptop-2:27021'}, {_id:3, host:'robotino-laptop-3:27021'}, {_id:4,host:'robotino-arbiter:27021'}]"
       replica-id: 1 #this should be the robot number, override it in host.yaml
       # initiate automatically
       initiate: true
@@ -54,9 +54,10 @@ plugins/mongodb/clients:
       mode: replica_set
       name: syncedrobmem
       hosts:
-        stargazer: stargazer:27021
-        orinoco: orinoco:27021
-        agamemnon: agamemnon:27021
+        robotino-laptop-1: robotino-laptop-1:27021
+        robotino-laptop-2: robotino-laptop-2:27021
+        robotino-laptop-3: robotino-laptop-3:27021
+        robotino-arbiter: robotino-arbiter:27021
     robotmemory-local:
       active: true
       mode: connection
