--- a/cfg/conf.d/clips-agent.yaml
+++ b/cfg/conf.d/clips-agent.yaml
@@ -50,12 +50,9 @@ clips-agent:
 
     #real-world-setup:
     peer-address: 172.26.255.255
-    peer-recv-port: 4444
-    peer-send-port: 4445
-    cyan-recv-port: 4441
-    cyan-send-port: 4446
-    magenta-recv-port: 4442
-    magenta-send-port: 4447
+    peer-port: 4444
+    cyan-port: 4441
+    magenta-port: 4442
 
     team-name: Carologistics
     crypto-key: HEGil7UV
