--- a/cfg/config.yaml
+++ b/cfg/config.yaml
@@ -22,7 +22,7 @@ fawkes:
     # Maximum time a thread may run per loop, 0 to disable; microseconds
     max_thread_time: 133333
 
-    loggers: console;file/debug:debug.log
+    loggers: console;file/debug:debug_$time.log
 
     # Enable to redirect stderr to the log. If you have mis-behaving
     # third-party code this can come in handy to keep records of what's
