--- a/cfg/conf.d/clips-agent.yaml
+++ b/cfg/conf.d/clips-agent.yaml
@@ -39,7 +39,7 @@ clips-agent:
  
   # Agent name. On startup the clips-agent will try to resolve a file named
   # <agent name>.clp. It must be in the CLIPS path directories.
-  agent: rcll2017/rcll2017
+  agent: rcll-pddl/rcll2016
 
  
   rcll2016:
