--- a/cfg/conf.d/pddl-robot-memory.yaml
+++ b/cfg/conf.d/pddl-robot-memory.yaml
@@ -8,9 +8,9 @@ plugins/pddl-robot-memory:
   # Which collection contains the worldmodel
   collection: "syncedrobmem.clipswm"
   # Where is the problem file to use as teplate (in src/agents) 
-  input-problem-description: rcll-robot-memory/pddl-problem-template.pddl
+  input-problem-description: rcll-pddl/pddl-problem-template.pddl
   # Where to put the generated problem file (in src/agents) 
-  output-problem-description: rcll-robot-memory/pddl-problem.pddl
+  output-problem-description: rcll-pddl/pddl-problem.pddl
   
   # Interface used to start generation with message and show when its final
   interface-name: "pddl-gen"
