pddl-from-order: produces a valid C0 problem, computables added
- added computables
  - OrderComputable to join product info into order
  - MachineTypeComputable to translate type into sth pddl compatible
- added complete template for C0 generation

--- a/src/plugins/pddl-from-order/Makefile
+++ b/src/plugins/pddl-from-order/Makefile
@@ -22,6 +22,7 @@ LIBS_pddl_from_order = m fawkescore fawkesutils fawkesaspects fawkesbaseapp \
 											PddlGenInterface
 
 OBJS_pddl_from_order = pddl-from-order_plugin.o pddl-from-order_thread.o
+OBJS_pddl_from_order += $(patsubst %.cpp,%.o,$(patsubst qa/%,,$(subst $(SRCDIR)/,,$(realpath $(wildcard $(SRCDIR)/computables/*.cpp)))))
 
 PLUGINS_all = $(PLUGINDIR)/pddl-from-order.$(SOEXT)
 
