--- a/cfg/conf.d/pddl-planner.yaml
+++ b/cfg/conf.d/pddl-planner.yaml
@@ -7,7 +7,7 @@ plugins/pddl-planner:
 
   # PDDL planner to be used
   # Possible values: ff, fd
-  planner: fd
+  planner: ff
 
   # Domain and problem description and location
   # Folder path needs a trailing /
@@ -16,7 +16,7 @@ plugins/pddl-planner:
   #domain-description: pddl-domain.pddl
   #problem-description: pddl-problem.pddl
   domain-description: domain.pddl
-  problem-description: rcll_problem_produce_c3.pddl
+  problem-description: pddl-problem.pddl
 
   # optional search options for fd planner
   fd-search-opts: --heuristic "hff=ff()" --heuristic "hcea=cea()" --search "lazy_greedy([hff, hcea], preferred=[hff, hcea])"
