stn-generator: add stn to rm flag

--- a/cfg/conf.d/stn-generator.yaml
+++ b/cfg/conf.d/stn-generator.yaml
@@ -15,4 +15,5 @@ plugins/stn-generator:
     interface: "pddl-planner"
 
   output:
+    publish-to-rm: true
     collection: "syncedrobmem.clipswm"
