--- a/cfg/conf.d/amcl.yaml
+++ b/cfg/conf.d/amcl.yaml
@@ -7,7 +7,7 @@ plugins/amcl:
   # Image file containing the map, must be a PNG file
   # If path starts with slash (/) it's considered to be absolute,
   # otherwise relative to the config directory
-  map_file: maps/rc-2017.png
+  map_file: maps/rc-2016.png
   # Resolution of the map; meters per pixel
   resolution: 0.05
 
@@ -16,8 +16,11 @@ plugins/amcl:
   # around Z axis. Many parts of the system currently ignore yaw.; m
   # There is a wall of one grid cell thickness around the map, therefore
   # set the origin to (-0.05, -0.05)
-  origin_x: 0.0
-  origin_y: 0.0
+  #origin_x: 0.0
+  #origin_y: 0.0
+  origin_x: -7.0
+  origin_y: -1.1
+
   origin_theta: 0.0
 
   # Pixels with occupancy probability greater than this threshold are
@@ -146,7 +149,7 @@ plugins/amcl:
     # Image file containing the map, must be a PNG file
     # If path starts with slash (/) it's considered to be absolute,
     # otherwise relative to the config directory
-    map_file: maps/halle-wall.png
+    map_file: maps/rc2016-wall.png
     # Resolution of the map; meters per pixel
     resolution: 0.05
 
@@ -155,8 +158,10 @@ plugins/amcl:
     # around Z axis. Many parts of the system currently ignore yaw.; m
     # There is a wall of one grid cell thickness around the map, therefore
     # set the origin to (-0.05, -0.05)
-    origin_x: 0.0
-    origin_y: 0.0
+    #origin_x: 0.0
+    #origin_y: 0.0
+    origin_x: -7.0
+    origin_y: -1.1
     origin_theta: 0.0
 
     # Pixels with occupancy probability greater than this threshold are
