--- a/cfg/conf.d/meta_plugins.yaml
+++ b/cfg/conf.d/meta_plugins.yaml
@@ -9,10 +9,11 @@ fawkes/meta_plugins:
   m-bare: bbsync,static-transforms,webview
   m-fv: fvbase,fvfountain
   m-fv-vision: m-bare,m-fv,tag_vision,fvretriever
-  m-clips: clips,clips-motor-switch,clips-protobuf,clips-webview,clips-navgraph,clips-tf,clips_robot_memory,pddl-robot-memory,pddl-planner,pddl-from-order,stn-generator
+  m-clips: clips,clips-motor-switch,clips-protobuf,clips-webview,clips-navgraph,clips-tf,clips_robot_memory #,pddl-robot-memory,pddl-planner,pddl-from-order,stn-generator
   m-clips-agent: m-clips,m-fv-vision,clips-agent
   m-skiller: ros,m-fv-vision,ros-pcl,navgraph,navgraph-generator,navgraph-generator-mps,mps-laser-gen,skiller,m-robot-memory
   m-robot-memory: mongodb,robot-memory
+  m-planner: m-robot-memory,pddl-robot-memory,pddl-planner,pddl-from-order,stn-generator
   m-full: m-skiller,m-clips-agent
 
   #
