--- a/cfg/conf.d/meta_plugins.yaml
+++ b/cfg/conf.d/meta_plugins.yaml
@@ -36,3 +36,4 @@ fawkes/meta_plugins:
   m-base-ros: ros,ros-pcl,ros-odometry,ros-tf,ros-laserscan,ros-move-base
   m-base-laser: laser,laser-filter,m-base-ros,laser-pointclouds,laser-cluster,laser-lines,map-lasergen
   m-base-full: m-base-bare,m-base-laser,m-base-gripper,m-base-ros,colli,amcl,m-base-joy,laser_front_dist
+  m-oprs: openprs,openprs-agent
