ASP-Agent: Set competition configuration

--- a/cfg/gazsim-configurations/default/host_robotino_4.yaml
+++ b/cfg/gazsim-configurations/default/host_robotino_4.yaml
@@ -46,7 +46,8 @@ asp-agent:
 clips-agent:
   rcll2016:
     #agent-role:
-    use-asp: false
+    use-asp: true
+    load-reasoner: false
     
     exploration:      
       row: HIGH
