--- a/cfg/conf.d/asp-agent.yaml
+++ b/cfg/conf.d/asp-agent.yaml
@@ -9,7 +9,7 @@ asp-agent:
     program-files: [exploration.lp, facts.lp, goal.lp, machines.lp, orders.lp, products.lp, robots.lp, state.lp, taskDeliver.lp, taskFeedRS.lp, taskGetBase.lp, taskGetProduct.lp, taskGoto.lp, taskMountCap.lp, taskMountRing.lp, taskPrepareCS.lp]
 
     #Look ahaed in real time seconds.
-    look-ahaed: 300
+    look-ahaed: 180
     #How many real time seconds should be one time unit for the ASP solver.
     time-resolution: 10
     #Names of possible used robots.
@@ -17,12 +17,12 @@ asp-agent:
     robot-timeout: 10
 
     #How many threads clingo should use for solving.
-    threads: 7
+    threads: 3
     #Wether splitting instead of competing for multiple threads by clingo should be used.
-    use-splitting: false
+    use-splitting: true
 
-    max-orders: 8
-    max-quantity: 2
+    max-orders: 7
+    max-quantity: 1
     max-products: 6
 
     #How long, given in milliseconds, the planer will wait to extract a (new) plan from a model.
@@ -36,7 +36,7 @@ asp-agent:
     high: 5
 
     #The interval to check if a robot is behind schedule.
-    robot-task-check: 5
+    robot-task-check: 10
     robot-task-behind: 20
 
     #The percent values relate to the time-resolution
