--- a/cfg/conf.d/robot-memory.yaml
+++ b/cfg/conf.d/robot-memory.yaml
@@ -38,6 +38,7 @@ plugins/robot-memory:
       replica-id: 1 #this should be the robot number, override it in host.yaml
       # initiate automatically
       initiate: true
+      max_setup_time_per_host_sec: 60
 
   computables:
     blackboard:
