pddl-from-order: generate required bases for each ring color
The ring color requirements were not dynamically generated before. A
computable is now in place to transform the integer values into their
equivalent string.

--- a/cfg/conf.d/robot-memory.yaml
+++ b/cfg/conf.d/robot-memory.yaml
@@ -57,6 +57,10 @@ plugins/robot-memory:
       collections: ['syncedrobmem.clipswm']
       priority: -9
       caching-time: 0.0
+    requiredbases:
+      collections: ['syncedrobmem.clipswm']
+      priority: -9
+      caching-time: 0.0
     
     
   
