pddl-from-order: optionally only get C3 order in computable

--- a/cfg/conf.d/robot-memory.yaml
+++ b/cfg/conf.d/robot-memory.yaml
@@ -53,6 +53,7 @@ plugins/robot-memory:
       collections: ['syncedrobmem.clipswm']
       priority: -9
       caching-time: 0.0
+      only-c3-order: true
     machine_type:
       collections: ['syncedrobmem.clipswm']
       priority: -9
