--- a/cfg/conf.d/markerless_recognition.yaml
+++ b/cfg/conf.d/markerless_recognition.yaml
@@ -6,11 +6,13 @@ doc-url: !url http://trac.fawkesrobotics.org/wiki/Plugins/tag_vision
 
 plugins/markerless_recognition:
   # camera being used
-  #camera: "file:file:file=/home/fnolden/Bilder/Webcam/11.jpg"
+  camera: "file:file:file=/home/casto/fawkes-robotino/src/plugins/markerless_recognition/BS_Depth_2682.jpg"
   #camera: v4l2:front:device=/dev/video0 #:size=640x480:awb=false:aec=false:agc=false:exposure=305
   #camera: v4l2:light:device=/dev/video1:white_balance_temperature_auto=0:exposure_auto=1:exposure_absolute=305
-  camera: v4l2:conveyor:device=/dev/video_conveyor
- #Shared Memory Imagebuffer name
+  #camera: v4l2:conveyor:device=/dev/video_conveyor
+
+        #Shared Memory Imagebuffer name~/fawkes-robotino/src/plugins/markerless_recognition/
+
   shm_image_id: "conveyor_vision"
 
   # frame of reference
