pddl-from-order: We want to also produce C0 again, enable it

--- a/cfg/conf.d/robot-memory.yaml
+++ b/cfg/conf.d/robot-memory.yaml
@@ -53,7 +53,7 @@ plugins/robot-memory:
       collections: ['syncedrobmem.clipswm']
       priority: -9
       caching-time: 0.0
-      only-c3-order: true
+      only-c3-order: false
     machine_type:
       collections: ['syncedrobmem.clipswm']
       priority: -9
