--- a/cfg/conf.d/markerless_recognition.yaml
+++ b/cfg/conf.d/markerless_recognition.yaml
@@ -9,16 +9,19 @@ plugins/markerless_recognition:
   #camera: "file:file:file=/home/casto/fawkes-robotino/src/plugins/markerless_recognition/BS_Depth_2682.jpg"
   #camera: v4l2:front:device=/dev/video0 #:size=640x480:awb=false:aec=false:agc=false:exposure=305
   #camera: v4l2:light:device=/dev/video1:white_balance_temperature_auto=0:exposure_auto=1:exposure_absolute=305
-  #camera: v4l2:conveyor:device=/dev/video_conveyor
-  camera:  v4l2:tag:device=/dev/video1
+  camera: v4l2:conveyor:device=/dev/video0
+  #camera: v4l2:tag:device=/dev/video1
+  #camera:  v4l2:tag:device=/dev/video1
 
 
   shm_image_id: "conveyor_vision"
 
   # frame of reference
-  frame: "/cam_conveyor"
+  dframe: "/cam_depth_markerless"
+  vframe: "/cam_vision_markerless"
+  
+  # frame of reference
+  dpath: "/home/casto/depth_image.jpg"
+  vpath: "/home/casto/vision_image.jpg"
 
-
-
-
-
+  
