--- a/cfg/conf.d/skills.yaml
+++ b/cfg/conf.d/skills.yaml
@@ -6,5 +6,7 @@ doc-url: !url https://trac.fawkesrobotics.org/wiki/Carologistics/skills
 skills:
   # The distance the robot has to drive after being aligned
   # in front of the mps
-  align_distance_conveyor:
-    x: 0.34
+  approach_distance_conveyor:
+    x: 0.315
+  approach_distance_laser:
+    x: 0.25
