--- a/cfg/conf.d/meta_plugins.yaml
+++ b/cfg/conf.d/meta_plugins.yaml
@@ -8,10 +8,13 @@ fawkes/meta_plugins:
   #
   m-bare: bbsync,static-transforms,webview
   m-fv: fvbase,fvfountain
-  m-fv-vision: m-bare,m-fv,tag_vision,fvretriever
-  m-clips: clips,clips-motor-switch,clips-protobuf,clips-webview,clips-navgraph,clips-tf,clips_robot_memory
+  #m-fv-vision: m-bare,m-fv,tag_vision,fvretriever,markerless
+  m-fv-vision: m-bare,m-fv,markerless
+  #m-clips: clips,clips-motor-switch,clips-protobuf,clips-webview,clips-navgraph,clips-tf,clips_robot_memory
+  m-clips: clips,clips-motor-switch,clips-protobuf,clips-webview,clips-navgraph,clips-tf
   m-clips-agent: m-clips,m-fv-vision,clips-agent
-  m-skiller: ros,m-fv-vision,ros-pcl,navgraph,navgraph-generator,navgraph-generator-mps,mps-laser-gen,skiller,m-robot-memory,markerless
+  #m-skiller: ros,m-fv-vision,ros-pcl,navgraph,navgraph-generator,navgraph-generator-mps,mps-laser-gen,skiller,m-robot-memory,markerless
+  m-skiller: ros,m-fv-vision,ros-pcl,navgraph,navgraph-generator,navgraph-generator-mps,skiller
   m-robot-memory: mongodb,robot-memory
   m-full: m-skiller,m-clips-agent
 
