clips-agent: setup routes for R-1 and R-3

--- a/cfg/conf.d/clips-agent.yaml
+++ b/cfg/conf.d/clips-agent.yaml
@@ -122,9 +122,9 @@ clips-agent:
       
       route:
         CYAN:
-          R-1: ["exp-11", "exp-12", "exp-11"]
+          R-1: ["exp-21", "exp-22", "exp-23", "exp-21", "exp-24"]
           R-2: ["exp-21", "exp-22", "exp-23", "exp-21", "exp-24"]
-          R-3: ["exp-31", "exp-32", "exp-31"]
+          R-3: ["exp-24", "exp-21", "exp-23", "exp-22", "exp-21"]
         MAGENTA:
           R-1: ["exp-12", "exp-11", "exp-12"]
           R-2: ["exp-22", "exp-21", "exp-22"]
