--- a/cfg/conf.d/clips-agent.yaml
+++ b/cfg/conf.d/clips-agent.yaml
@@ -41,6 +41,8 @@ clips-agent:
   # <agent name>.clp. It must be in the CLIPS path directories.
   agent: rcll2017/rcll2017
 
+  disable-storage-station: true
+
  
   rcll2016:
     #agent-role defined in host.yaml (this is only the default!)
