--- a/cfg/conf.d/conveyor_pose.yaml
+++ b/cfg/conf.d/conveyor_pose.yaml
@@ -11,6 +11,8 @@ conveyor_pose:
   # the point cloud that is used to detect the belt
   cloud_in: "/camera/depth/points"
 
+  realsense_wait_time: 2.5
+
   if:
     # the prefix used for all interfaces
     prefix: conveyor_pose
@@ -61,11 +63,11 @@ conveyor_pose:
 
   # the dimensions of the gripper in the point cloud (check rotation of actual tf)
   gripper:
-    y_min: -0.01
-    y_max: -0.055
+    y_min: -0.055
+    y_max: -0.015
     z_max: 0.135
     slice:
-      y_min: -0.02
+      y_min: -0.035
       y_max: 0.035
   front:
     # the distance that is not pruned at the front of the MPS
@@ -75,16 +77,16 @@ conveyor_pose:
   bottom:
     offset: 0.06
   left_right:
-    left_cut: 0.1
-    right_cut: 0.1
-    left_cut_no_ll: -0.8
-    right_cut_no_ll: 0.8    
+    left_cut: 0.05
+    right_cut: 0.05
+    left_cut_no_ll: 0.05
+    right_cut_no_ll: 0.05
   plane:
     # the allowed noise for a plane
     dist_threshold: 0.0025
     normal_z_minimum: 0.1
-    height_minimum: 0.025
-    width_minimum: 0.025
+    height_minimum: 0.02
+    width_minimum: 0.02
   cluster:
     tolerance: 0.0015
     size_min: 100
