skills/zone_recog:recog_from_align: factor, bugfix
Fixed a bunch of bugs in zone_recog
Added a factor for smoothening the recog_from_align

--- a/cfg/conf.d/markerless_recognition.yaml
+++ b/cfg/conf.d/markerless_recognition.yaml
@@ -21,7 +21,7 @@ plugins/markerless_recognition:
   vframe: "/cam_vision_markerless"
   
   # frame of reference
-  dpath: "/home/casto/depth_image.jpg"
-  vpath: "/home/casto/vision_image.jpg"
+  dpath: "/tmp/depth_image.jpg"
+  vpath: "/tmp/vision_image.jpg"
 
   
