--- a/cfg/conf.d/laser-filter.yaml
+++ b/cfg/conf.d/laser-filter.yaml
@@ -92,21 +92,6 @@ plugins/laser-filter:
         type: min_merge
         timestamp_selection: first
 
-  map:
-    debug: false
-
-    # URG input interface
-    in/filtered: Laser360Interface::Laser urg-filtered
-
-    # URG filtered output interface
-    out/mapless: Laser360Interface::Laser mapless
-
-    filters:
-
-      1-map:
-        # filter to remove map parts of the laser
-        type: map_filter
-
   simulation:
     active: false
     in/sick-tim55x: Laser360Interface::Laser tim55x
@@ -138,6 +123,7 @@ plugins/laser-filter:
         type: 1080to360
 
   colli:
+    active: false
 
     # URG input interface
     in/urg: Laser360Interface::Laser urg-filtered
