gazebo: change gripper->conveyor static tf
the simulated gripper doesn't really move, so we need to tune the
gripper->cam_conveyor transform so that the conveyor_align skill doesn't
need do any z-alignment (which used to fail).

--- a/cfg/gazsim-configurations/gazsim-config-override.yaml
+++ b/cfg/gazsim-configurations/gazsim-config-override.yaml
@@ -107,6 +107,8 @@ plugins/static-transforms:
       rot_pitch: 0 
       rot_yaw: 0
       rot_roll: 0
+    cam_conveyor:
+      trans_z: -0.056
 
 plugins/mongodb/clients:
   robotmemory-synced:
