plugin/markerless_recognitino: Add in meta_plugins.yaml/ clean interface
 	Removed unused values from the MPSRecognitionInterface.xml

	Added the plugin in the meta_plugins.yaml

--- a/src/plugins/markerless_recognition/Makefile
+++ b/src/plugins/markerless_recognition/Makefile
@@ -19,6 +19,8 @@ BASEDIR = ../../..
 include $(BASEDIR)/etc/buildsys/config.mk
 include $(BUILDCONFDIR)/tf/tf.mk
 
+PRESUBDIRS = interfaces 
+
 LIBS_markerless = fawkescore fawkesutils fawkesaspects fvutils \
 	       fawkestf fawkesinterface fawkesblackboard \
 	       MPSRecognitionInterface hdf5
