config: apply min circle filter a 2nd time after projecting back laser
If a point is outside the specified limits of the projection filter,
the filter simply sets the point to 0. Therefore, after applying the
projection, we need to apply a min circle filter a second time.

--- a/cfg/conf.d/laser-filter.yaml
+++ b/cfg/conf.d/laser-filter.yaml
@@ -55,6 +55,14 @@ plugins/laser-filter:
         only_from_z: -0.23
         only_to_z: 0.33
 
+      4-min:
+        # Filter again after the transform to remove points that are projected
+        # into the laser origin.
+        type: min_circle
+
+        # Radius of minimum length; m
+        radius: 0.04
+
 
   robot-front-1080:
     active: true
