--- a/cfg/conf.d/navgraph-generator.yaml
+++ b/cfg/conf.d/navgraph-generator.yaml
@@ -68,8 +68,8 @@ navgraph-generator-mps:
   # The length (length of long edge) of MPS stations; m
   mps-length: 0.7
 
-  # The distance in which to place approach points from the machine; m
-  approach-distance: 0.62
+  # The distance in which to place approach points from the machine (measured from the outsite of the mps, not the center); m
+  approach-distance: 0.75
 
   # Set to true to add the corners of an MPS as obstacles themselves.
   # Otherwise only the center point of the MPS is added as obstacles
