gazsim_gripper: react to arduino msgs
when a arduino msgs regarding the heigh is received, this is now stored
in the bb as well as send to gazebo

--- a/cfg/conf.d/gazsim.yaml
+++ b/cfg/conf.d/gazsim.yaml
@@ -29,6 +29,7 @@ gazsim:
     set-team-name: "~/LLSFRbSim/SetTeamName/"
     message: "~/RobotinoSim/String/"
     gripper: "~/RobotinoSim/SetGripper/"
+    conveyor: "~/RobotinoSim/SetConveyor/"
     gripper-has-puck: "~/RobotinoSim/GripperHasPuck/"
     tag-vision: "~/tag-vision"
   
