config: disable IPv6
We've seen avahi exceptions related to IPv6 and there is no need to
enable it, so turn it off.

--- a/cfg/conf.d/network.yaml
+++ b/cfg/conf.d/network.yaml
@@ -15,7 +15,7 @@ network:
     #listen: !ipv4 127.0.0.1
 
   ipv6:
-    enable: true
+    enable: false
     #listen: !ipv6 "::1"
 
   # Fawkes protocol specific settings
