gazsim-config: add timestamp to log file paths

--- a/cfg/gazsim-configurations/default/robotino1.yaml
+++ b/cfg/gazsim-configurations/default/robotino1.yaml
@@ -15,5 +15,5 @@ fawkes:
 
   # Main app relevant settings
   mainapp:
-    loggers: console;file/debug:debug1.log
+    loggers: console;file/debug:debug1_$time.log
 
