--- a/cfg/gazsim-configurations/default/robotino2.yaml
+++ b/cfg/gazsim-configurations/default/robotino2.yaml
@@ -15,5 +15,5 @@ fawkes:
 
   # Main app relevant settings
   mainapp:
-    loggers: console;file/debug:debug2.log
+    loggers: console;file/debug:debug2_$time.log
 
