--- a/cfg/gazsim-configurations/default/robotino3.yaml
+++ b/cfg/gazsim-configurations/default/robotino3.yaml
@@ -15,5 +15,5 @@ fawkes:
 
   # Main app relevant settings
   mainapp:
-    loggers: console;file/debug:debug3.log
+    loggers: console;file/debug:debug3_$time.log
 
