dynamixel: disable prevent_alarm_shutdown
As we are using the spring we do not have to make use of the
prevent_alarm_shutdown feature in the dynamixel plugin.

--- a/cfg/conf.d/dynamixel.yaml
+++ b/cfg/conf.d/dynamixel.yaml
@@ -38,7 +38,7 @@ dynamixel:
 
     # prevent alarm shutdown to turn into the direction of the torque
     # when the particular servo is in overload condition
-    prevent_alarm_shutdown: true
+    prevent_alarm_shutdown: false
 
     # normalized value of torque limit to measure an overload condition
     prevent_alarm_shutdown_threshold: 0.6
