--- a/cfg/conf.d/navgraph-generator.yaml
+++ b/cfg/conf.d/navgraph-generator.yaml
@@ -55,6 +55,15 @@ navgraph-generator:
   visualization:
     enable: true
 
+  # This can be enabled, e.g., for later debugging or during automated
+  # experiments.
+  save-to-file:
+    enable: true
+    # Filename, if starting with a slash (/), absolute path is assumed,
+    # otherwise, it is assumed to be relative to the config directory.
+    # Path may not contain two consecutive dots (..).
+    filename: navgraph-generated.yaml
+
 navgraph-generator-mps:
   # Base algorithm for graph (used by navgraph-generator)
   # This may be either voronoi or grid.
