--- a/cfg/conf.d/clips-agent.yaml
+++ b/cfg/conf.d/clips-agent.yaml
@@ -39,7 +39,7 @@ clips-agent:
  
   # Agent name. On startup the clips-agent will try to resolve a file named
   # <agent name>.clp. It must be in the CLIPS path directories.
-  agent: rcll2017/rcll2017
+  agent: rcll-robot-memory/rcll2016
 
   disable-storage-station: true
 
@@ -120,15 +120,9 @@ clips-agent:
       #row defined in host.yaml (this is only the default!)
       row: MID
       
-      route:
-        CYAN:
-          R-1: ["exp-21", "exp-22", "exp-23", "exp-21", "exp-24"]
-          R-2: ["exp-21", "exp-22", "exp-23", "exp-21", "exp-24"]
-          R-3: ["exp-24", "exp-21", "exp-23", "exp-22", "exp-21"]
-        MAGENTA:
-          R-1: ["exp-12", "exp-11", "exp-12"]
-          R-2: ["exp-22", "exp-21", "exp-22"]
-          R-3: ["exp-32", "exp-31", "exp-32"]
+      row-high: ["Z16", "Z3", "Z2", "Z1", "Z13", "Z14", "Z15", "Z4"]
+      row-mid: ["Z9", "Z10", "Z11", "Z12", "Z8", "Z7", "Z6", "Z5"]
+      row-low: ["Z17", "Z18", "Z19", "Z20", "Z24", "Z23", "Z22", "Z21"]
 
       #the time in seconds to report all machines even if we are not prepared for production
       latest-send-last-report-time: 210 # =3:30
