--- a/cfg/conf.d/meta_plugins.yaml
+++ b/cfg/conf.d/meta_plugins.yaml
@@ -8,10 +8,10 @@ fawkes/meta_plugins:
   #
   m-bare: bbsync,static-transforms,webview
   m-fv: fvbase,fvfountain
-  m-fv-vision: m-bare,m-fv,tag_vision,fvretriever
+  m-fv-vision: m-bare,m-fv,machine-signal,tag_vision,fvretriever
   m-clips: clips,clips-motor-switch,clips-protobuf,clips-webview,clips-navgraph,clips-tf
-  m-clips-agent: m-clips,m-fv-vision,clips-agent,webtools-bridge
-  m-skiller: ros,m-fv-vision,navgraph,navgraph-generator,navgraph-generator-mps,skiller,realsense,conveyor-pose,ros-pcl
+  m-clips-agent: m-clips,m-fv-vision,clips-agent
+  m-skiller: ros,m-fv-vision,ros-pcl,navgraph,navgraph-generator,navgraph-generator-mps,mps-laser-gen,skiller
   m-robot-memory: mongodb,robot-memory
   m-full: m-skiller,m-clips-agent
   m-asp-planer: m-robot-memory,asp,asp-planer,navgraph,navgraph-generator,navgraph-generator-mps,webview
@@ -20,8 +20,8 @@ fawkes/meta_plugins:
   # Gazebo stuff
   #
   gazsim-meta-robotino: gazebo,static-transforms,gazsim-robotino,gazsim-laser,laser-filter,laser-pointclouds,laser-cluster,gazsim-timesource,gazsim-gripper,gazsim-conveyor,laser_front_dist,webview
-  gazsim-meta-robotino-ros: gazsim-meta-robotino,ros,ros-clock,robotino-ros-joints,ros-odometry,ros-tf,ros-laserscan,amcl,navgraph,navgraph-generator,navgraph-generator-mps,laser-lines,ros-cmdvel,ros-navigator,gazsim-vis-localization,skiller
-  gazsim-meta-robotino-no-ros: gazsim-meta-robotino,amcl,navgraph,navgraph-generator,navgraph-generator-mps,laser-lines,colli,gazsim-vis-localization,skiller
+  gazsim-meta-robotino-ros: gazsim-meta-robotino,ros,ros-clock,robotino-ros-joints,ros-odometry,ros-tf,ros-laserscan,ros-move-base,amcl,navgraph,navgraph-generator,navgraph-generator-mps,map-lasergen,laser-lines,colli,gazsim-vis-localization,skiller
+  gazsim-meta-robotino-no-ros: gazsim-meta-robotino,amcl,navgraph,navgraph-generator,navgraph-generator-mps,map-lasergen,laser-lines,colli,gazsim-vis-localization,skiller
   gazsim-meta-robotino-vision-high-level: gazsim-tag-vision,gazsim-machine-signal
   gazsim-meta-robotino-vision-low-level: fvbase,gazsim-webcam,tag_vision,gazsim-machine-signal
   gazsim-organization: gazebo,gazsim-comm,gazsim-llsfrbcomm
@@ -36,6 +36,6 @@ fawkes/meta_plugins:
   m-base-joy: m-base-bare,joystick,joystick-teleop
   m-base-joy-safe: m-base-bare,laser,laser-filter,joystick,joystick-teleop
   m-base-gripper: arduino,dynamixel,ax12_gripper
-  m-base-ros: ros,ros-pcl,ros-odometry,ros-tf,ros-laserscan,ros-cmdvel,ros-navigator
-  m-base-laser: laser,laser-filter,m-base-ros,laser-pointclouds,laser-cluster,laser-lines
-  m-base-full: m-base-bare,m-base-laser,m-base-gripper,m-base-ros,amcl,m-base-joy,laser_front_dist
+  m-base-ros: ros,ros-pcl,ros-odometry,ros-tf,ros-laserscan,ros-move-base
+  m-base-laser: laser,laser-filter,m-base-ros,laser-pointclouds,laser-cluster,laser-lines,map-lasergen
+  m-base-full: m-base-bare,m-base-laser,m-base-gripper,m-base-ros,colli,amcl,m-base-joy,laser_front_dist
