--- a/cfg/conf.d/robot-memory.yaml
+++ b/cfg/conf.d/robot-memory.yaml
@@ -26,13 +26,13 @@ plugins/robot-memory:
     # configuration for setting up all mongod and mongos instances:
     local:
       replica-set-name: "local" #single instance set needed to optain the oplog, not actually replicated 
-      port: 27017
+      port: 27077
       db-path: "~/.robot-memory/dbs/local"
     replicated:
-      port: 27021
+      port: 27081
       replica-set-name: "syncedrobmem"
       db-path: "~/.robot-memory/dbs/distributed"
-      replica-set-members: "[{_id:1,host:'stargazer:27021'}, {_id:2,host:'orinoco:27021'}, {_id:3, host:'agamemnon:27021'}]"
+      replica-set-members: "[{_id:1,host:'localhost:27081'}]"
       replica-id: 1 #this should be the robot number, override it in host.yaml
       # initiate automatically
       initiate: true
@@ -54,10 +54,8 @@ plugins/mongodb/clients:
       mode: replica_set
       name: syncedrobmem
       hosts:
-        stargazer: stargazer:27021
-        orinoco: orinoco:27021
-        agamemnon: agamemnon:27021
+        localhost: localhost:27081
     robotmemory-local:
       active: true
       mode: connection
-      hostport: localhost:27017
+      hostport: localhost:27077
