asp-agent: Change team name for docker file

--- a/cfg/gazsim-configurations/default/host_robotino_2.yaml
+++ b/cfg/gazsim-configurations/default/host_robotino_2.yaml
@@ -31,7 +31,7 @@ plugins/light_front:
   shm_image_id: "robotino2/light_front"
   
 asp-agent:
-  team-name: "ASP Rules!"
+  team-name: "CaroASP"
   robot-name: "T'Pol"
   robot-number: 2
 
