--- a/cfg/conf.d/asp-agent.yaml
+++ b/cfg/conf.d/asp-agent.yaml
@@ -85,7 +85,7 @@ asp-agent:
   cyan-port: 4441
   magenta-port: 4442
 
-  team-name: "ASP Rules!"
+  team-name: "CaroASP"
   crypto-key: "live long and prosper"
   cipher: "aes-128-cbc"
 
