--- a/cfg/gazsim-configurations/default/host_robotino_3.yaml
+++ b/cfg/gazsim-configurations/default/host_robotino_3.yaml
@@ -31,7 +31,7 @@ plugins/light_front:
   shm_image_id: "robotino3/light_front"
 
 asp-agent:
-  team-name: "ASP Rules!"
+  team-name: "CaroASP"
   robot-name: Spock
   robot-number: 3
 
