--- a/cfg/gazsim-configurations/default/host_robotino_5.yaml
+++ b/cfg/gazsim-configurations/default/host_robotino_5.yaml
@@ -31,7 +31,7 @@ plugins/light_front:
   shm_image_id: "robotino5/light_front"
   
 asp-agent:
-  team-name: "ASP Rocks!"
+  team-name: "CaroASP"
   robot-name: "T'Pol"
   robot-number: 5
 
