asp-planner: Fix include paths for docker

--- a/src/plugins/asp-planer/Makefile
+++ b/src/plugins/asp-planer/Makefile
@@ -29,11 +29,11 @@ HAVE_BOOST_LIBS = $(call boost-have-libs,$(REQ_BOOST_LIBS))
 #TODO: export this in .mk and really check
 HAVE_CLINGO = 1
 CFLAGS_CLINGO = -DWITH_THREADS=1 \
-	-I $(HOME)/clingo/libclasp \
-	-I $(HOME)/clingo/libclingo \
-	-I $(HOME)/clingo/libgringo \
-	-I $(HOME)/clingo/liblp \
-	-I $(HOME)/clingo/libprogram_opts
+	-I /opt/clingo/libclasp \
+	-I /opt/clingo/libclingo \
+	-I /opt/clingo/libgringo \
+	-I /opt/clingo/liblp \
+	-I /opt/clingo/libprogram_opts
 LDFLAGS_CLINGO = -L/opt/clingo/build/bin/ -Wl,-rpath=/opt/clingo/build/bin/ -lclingo
 
 ifeq ($(HAVE_CPP14)$(HAVE_CLINGO)$(HAVE_BOOST_LIBS),111)
