rcll2016-smt: Team name changes to CaroSMT

--- a/cfg/conf.d/clips-agent.yaml
+++ b/cfg/conf.d/clips-agent.yaml
@@ -54,7 +54,7 @@ clips-agent:
     cyan-port: 4441
     magenta-port: 4442
 
-    team-name: Carologistics
+    team-name: CaroSMT
     crypto-key: randomkey
     cipher: "aes-128-cbc"
 
