hackathon: add state estimation initializer
Right now this simply opens the blackboard interface for the robot pose.

--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -62,6 +62,7 @@ clips-executive:
       #macro-expansion: hackathon/action-selection.clp
       action-execution: plan-exec.clp
       execution-monitoring: hackathon/execution-monitoring.clp
+      state-estimation: hackathon/state-estimation-init.clp
 
       action-mapping:
         say: say{text=?(text)s, wait=true}
