--- a/cfg/gazsim-configurations/gazsim-config-override.yaml
+++ b/cfg/gazsim-configurations/gazsim-config-override.yaml
@@ -124,3 +124,7 @@ plugins/robot-memory:
     replicated:
       replica-set-members:
         - localhost:27021
+
+fawkes/bbsync:
+  peers:
+    robotino-base/active: false
