--- a/cfg/gazsim-configurations/default/host_robotino_2.yaml
+++ b/cfg/gazsim-configurations/default/host_robotino_2.yaml
@@ -68,3 +68,6 @@ webtools-bridge:
   #port where rosbridge is expected to start. Websocket connection will be established to forward the Ros requests to the Rosbridge
   rosbridge-port: 8080
   rosbridge-uri: "ws://localhost:8080"
+
+fawkes/bbsync:
+    peers/other-robotino/port: !tcp-port 1921
